--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,5 @@ include ':rpi_practice5'
 include ':rpi_practice6_1'
 include ':rpi_practice6_2'
 include ':rpi_practice6_3'
+include ':rpi_practice8_1'
+include ':rpi_practice8_2'
